opam-version: "2.0"
name: "mirage-zmq"
version: "0.1"
synopsis: "A 0MQ implementation for MirageOS"
maintainer: "Huiyao Zheng <huiyaozheng@gmail.com>"
authors: "Huiyao Zheng <huiyaozheng@gmail.com>"
dev-repo: "https://github.com/TheLortex/Mirage-zmq"
depends: [ 
  "ocaml" 
  "dune"
  "lwt-dllist" 
  "tcpip" 
  "logs"
]
build: [
  ["dune" "subst"] {pinned} 
  ["dune" "build" "-p" name "-j" jobs ]
]